--- a/package.json
+++ b/package.json
@@ -45,14 +45,14 @@
     "grunt-localizr": "^0.1.0",
     "grunt-mocha-cli": "^1.5.0",
     "jeet": "^6.1.2",
-    "jquery": "^2.1.4",
+    "jquery": "~3.0.0",
     "kraken-devtools-browserify": "0.0.3",
     "loaders.css": "^0.1.1",
     "mocha": "^1.18.0",
     "nib": "^1.1.0",
     "nock": "^2.6.0",
     "numeral": "^1.5.3",
-    "slick-carousel": "^1.5.5",
+    "slick-carousel": "1.5.5",
     "spin.js": "^2.3.1",
     "supertest": "^0.9.0"
   },
